@@ -1,6 +1,6 @@
 ---
 name: URI-Title
-version: 1.61
+version: 1.62
 author: ~
 abstract: get the titles of things on the web in a sensible way
 license: perl
@@ -15,7 +15,7 @@ requires:
 provides:
   URI::Title:
     file: lib/URI/Title.pm
-    version: 1.61
+    version: 1.62
   URI::Title::HTML:
     file: lib/URI/Title/HTML.pm
   URI::Title::Image:
@@ -24,4 +24,4 @@ provides:
     file: lib/URI/Title/MP3.pm
   URI::Title::PDF:
     file: lib/URI/Title/PDF.pm
-generated_by: Module::Build version 0.2611
+generated_by: Module::Build version 0.2612
